--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/OrderTab/View/Order.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/OrderTab/View/Order.storyboard
@@ -88,7 +88,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="ljF-gP-T1B" colorLabel="IBBuiltInLabel-Orange">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" name="yellowBeer"/>
+                        <color key="barTintColor" name="grayBeer"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                             <color key="textColor" name="blackBeer"/>
@@ -107,11 +107,11 @@
         <namedColor name="blackBeer">
             <color red="0.22400000691413879" green="0.24300000071525574" blue="0.27500000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="grayBeer">
+            <color red="0.92549019607843142" green="0.90980392156862744" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="whiteBeer">
             <color red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="yellowBeer">
-            <color red="0.97299998998641968" green="0.70999997854232788" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
