--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab/View/AccountTab.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab/View/AccountTab.storyboard
@@ -209,35 +209,50 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ID" translatesAutoresizingMaskIntoConstraints="NO" id="YGM-bS-huY">
                                 <rect key="frame" x="44" y="111" width="287" height="189"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Folio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08D-2b-BIt">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="08D-2b-BIt">
                                 <rect key="frame" x="44" y="329" width="37" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gjf-1P-1nJ">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gjf-1P-1nJ">
                                 <rect key="frame" x="44" y="358" width="287" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3A-Ja-5qD">
-                                <rect key="frame" x="159" y="445" width="56" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3A-Ja-5qD" customClass="BeerButton" customModule="Las_Chelas" customModuleProvider="target">
+                                <rect key="frame" x="137" y="445" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="pqb-bR-IiJ"/>
+                                </constraints>
                                 <state key="normal" title="Guardar">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" name="blackBeer"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusValue">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                        <color key="value" name="yellowBeer"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="YGM-bS-huY" firstAttribute="top" secondItem="jJr-mH-shC" secondAttribute="top" constant="47" id="190-TP-lh8"/>
+                            <constraint firstItem="Gjf-1P-1nJ" firstAttribute="top" secondItem="08D-2b-BIt" secondAttribute="bottom" constant="8" id="GJv-cw-f83"/>
+                            <constraint firstItem="u3A-Ja-5qD" firstAttribute="centerX" secondItem="ffv-64-b10" secondAttribute="centerX" id="V3E-sA-BQl"/>
+                            <constraint firstItem="08D-2b-BIt" firstAttribute="leading" secondItem="jJr-mH-shC" secondAttribute="leading" constant="44" id="bYa-dO-Lvt"/>
+                            <constraint firstItem="Gjf-1P-1nJ" firstAttribute="leading" secondItem="jJr-mH-shC" secondAttribute="leading" constant="44" id="cG5-UJ-7ls"/>
                             <constraint firstItem="jJr-mH-shC" firstAttribute="bottom" secondItem="YGM-bS-huY" secondAttribute="bottom" constant="318" id="gGL-xm-ROK"/>
                             <constraint firstItem="YGM-bS-huY" firstAttribute="leading" secondItem="jJr-mH-shC" secondAttribute="leading" constant="44" id="kaH-Hn-zU7"/>
+                            <constraint firstItem="08D-2b-BIt" firstAttribute="top" secondItem="YGM-bS-huY" secondAttribute="bottom" constant="29" id="kfR-Vz-Eiv"/>
+                            <constraint firstItem="jJr-mH-shC" firstAttribute="trailing" secondItem="Gjf-1P-1nJ" secondAttribute="trailing" constant="44" id="tK1-Oj-DRE"/>
                             <constraint firstItem="jJr-mH-shC" firstAttribute="trailing" secondItem="YGM-bS-huY" secondAttribute="trailing" constant="44" id="yyi-5y-Jw9"/>
+                            <constraint firstItem="u3A-Ja-5qD" firstAttribute="top" secondItem="Gjf-1P-1nJ" secondAttribute="bottom" constant="57" id="z3b-4H-pRd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jJr-mH-shC"/>
                     </view>
@@ -324,6 +339,9 @@
         </namedColor>
         <namedColor name="grayBeer">
             <color red="0.92549019607843142" green="0.90980392156862744" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="yellowBeer">
+            <color red="0.97299999000000004" green="0.70999997849999996" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
     <color key="tintColor" name="blackBeer"/>
