--- a/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab/View/AccountTab.storyboard
+++ b/App 2 modulo/Las Chelas/Las Chelas/Las Chelas/AccountTab/View/AccountTab.storyboard
@@ -15,10 +15,10 @@
         <scene sceneID="ea7-DZ-fdU">
             <objects>
                 <tableViewController id="thg-H7-8cu" customClass="AccountControllerTableViewController" customModule="Las_Chelas" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OEc-OX-NB8">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="OEc-OX-NB8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="whiteBeer"/>
                         <sections>
                             <tableViewSection id="PBi-9F-V2C">
                                 <cells>
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="njD-XL-hJk" id="rhk-Xy-qhh">
-                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Historial" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lZY-Zy-7b7">
@@ -45,6 +45,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="whiteBeer"/>
                                         <connections>
                                             <segue destination="URK-UV-APf" kind="show" identifier="irHistorial" id="rVL-xd-T4X"/>
                                         </connections>
@@ -53,7 +54,7 @@
                                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H1F-sj-zSU" id="Sb1-tT-5If">
-                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Metodo de Pago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jwK-wW-aa4">
@@ -72,6 +73,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="whiteBeer"/>
                                         <connections>
                                             <segue destination="AqD-GC-jrD" kind="show" identifier="irPago" id="J12-os-hE9"/>
                                         </connections>
@@ -80,7 +82,7 @@
                                         <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oOy-A4-5fi" id="s1J-j9-hGJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Mi Identificacion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e25-Yd-1Bv">
@@ -99,6 +101,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="whiteBeer"/>
                                         <connections>
                                             <segue destination="4OS-lH-tG7" kind="show" id="uhK-Yh-OG4"/>
                                         </connections>
@@ -175,19 +178,31 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5dg-6X-Asp">
-                                <rect key="frame" x="167" y="520" width="40" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5dg-6X-Asp" customClass="BeerButton" customModule="Las_Chelas" customModuleProvider="target">
+                                <rect key="frame" x="137" y="520" width="100" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="RQ6-xW-Qqk"/>
+                                </constraints>
                                 <state key="normal" title="Pagar">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusValue">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                        <color key="value" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="whiteBeer"/>
                         <constraints>
                             <constraint firstItem="pag-px-zLl" firstAttribute="leading" secondItem="P1v-kk-orb" secondAttribute="leading" constant="42" id="Kye-Xo-voH"/>
                             <constraint firstItem="P1v-kk-orb" firstAttribute="bottom" secondItem="pag-px-zLl" secondAttribute="bottom" constant="375" id="Xpv-G8-XeL"/>
+                            <constraint firstItem="P1v-kk-orb" firstAttribute="bottom" secondItem="5dg-6X-Asp" secondAttribute="bottom" constant="68" id="iHB-J5-lqo"/>
+                            <constraint firstItem="5dg-6X-Asp" firstAttribute="centerX" secondItem="rSi-46-Ypi" secondAttribute="centerX" id="lur-7b-KQu"/>
                             <constraint firstItem="P1v-kk-orb" firstAttribute="trailing" secondItem="pag-px-zLl" secondAttribute="trailing" constant="43" id="mef-ZD-r66"/>
                             <constraint firstItem="pag-px-zLl" firstAttribute="top" secondItem="P1v-kk-orb" secondAttribute="top" constant="49" id="nqu-fa-iyA"/>
                         </constraints>
@@ -240,7 +255,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="whiteBeer"/>
                         <constraints>
                             <constraint firstItem="YGM-bS-huY" firstAttribute="top" secondItem="jJr-mH-shC" secondAttribute="top" constant="47" id="190-TP-lh8"/>
                             <constraint firstItem="Gjf-1P-1nJ" firstAttribute="top" secondItem="08D-2b-BIt" secondAttribute="bottom" constant="8" id="GJv-cw-f83"/>
@@ -268,7 +283,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zHR-Tj-gtb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" name="whiteBeer"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="historicoCell" textLabel="cpM-PW-dAQ" detailTextLabel="ld1-Yb-ORd" style="IBUITableViewCellStyleValue1" id="w6B-71-grl">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -293,6 +308,7 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" name="whiteBeer"/>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -339,6 +355,9 @@
         </namedColor>
         <namedColor name="grayBeer">
             <color red="0.92549019607843142" green="0.90980392156862744" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="whiteBeer">
+            <color red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="yellowBeer">
             <color red="0.97299999000000004" green="0.70999997849999996" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
